tests/snapshots/output/teapot_index.snap
---
source: tests/snapshots/teapot.rs
description: "{% extends \"base.html\" %}\n\n{% block title %}{{ page_title }}{% endblock %}\n\n{% block content %}\n    {# Teapot introduction: hero, statistics, teapot types, and fun facts #}\n    {% include \"intro.html\" %}\n\n    {# The story: history and coffee incompatibility #}\n    {% include \"story.html\" %}\n\n    {# HTTP protocol fundamentals: methods, status categories, protocol properties #}\n    {% include \"http-protocol.html\" %}\n\n    {# Status code 418 implementation details: feature flags, metrics, response phrase, and analysis #}\n    {% include \"status-code-details.html\" %}\n\n    {# Brewing best practices: macros, temperature control, brew status, and compatibility matrix #}\n    {% include \"brewing-practices.html\" %}\n{% endblock %}\n"
---
{% extends "base.html" %}
{% block title %}{{ page_title }}{% endblock %}
{% block content %}
    {# Teapot introduction: hero, statistics, teapot types, and fun facts #}
    {% include "intro.html" %}
    {# The story: history and coffee incompatibility #}
    {% include "story.html" %}
    {#
        HTTP protocol fundamentals: methods, status categories, protocol properties
    #}
    {% include "http-protocol.html" %}
    {#
        Status code 418 implementation details: feature flags, metrics, response phrase, and analysis
    #}
    {% include "status-code-details.html" %}
    {#
        Brewing best practices: macros, temperature control, brew status, and compatibility matrix
    #}
    {% include "brewing-practices.html" %}
{% endblock %}
