tests/snapshots/output/tmpl_nested_comment.snap
---
source: tests/snapshots/rules.rs
description: "{#-   Some    {# Nested {#~   Comments #}   +#}    ~#}\n"
---
{#-   Some    {# Nested {#~   Comments #}   +#}    ~#}
