tests/snapshots/output/tmpl_trailing_space.snap
---
source: tests/snapshots/rules.rs
description: "{%     if foo  ~%}   {{-    bar  -}}   {%   else if     another   -%}         nothing       {%-   endif   %}\n"
---
{% if foo ~%}
    {{- bar -}}
{% else if another -%}
    nothing
{%- endif %}
