tests/snapshots/output/unclosed_attr_quote.snap
---
source: tests/snapshots/malformed.rs
description: "<form id=\"login-form\" class=user-form needs-validation\" action=\"/login-submit\" method=\"post\" novalidate>\n  <input type=\"email\" id=\"user-email\" class=\"form-control\" name=\"email placeholder=\"Enter your email\" required aria-label=\"Email Address\">\n</form>\n"
---
<form id="login-form" class=user-form needs-validation" action="/login-submit" method="post" novalidate>
  <input type="email" id="user-email" class="form-control" name="email placeholder="Enter your email" required aria-label="Email Address">
</form>
