tests/snapshots/output/unclosed_block.snap
---
source: tests/snapshots/malformed.rs
description: "{% block paragraph %}<p>A cool paragraph</p>\n"
---
{% block paragraph %}
    <p>A cool paragraph</p>
