tests/snapshots/output/unclosed_div.snap
---
source: tests/snapshots/malformed.rs
description: "<main> <div> <h2>Test</h2> <p> Where did that div go </p> </main>\n"
---
<main>
    <div>
        <h2>Test</h2>
        <p>Where did that div go</p>
    </main>
