tests/snapshots/output/unclosed_tags_in_conditional.snap
---
source: tests/snapshots/malformed.rs
description: "<div>\n    {% if first %}\n        <strong>\n    {% elif last %}\n        <strong>{{ foo }}<span>\n    {% else %}\n    {% endif %}\n        </strong>\n</div>\n"
---
<div>
    {% if first %}
        <strong>
        {% elif last %}
            <strong>
                {{ foo }}<span>
                {% else %}
    {% endif %}
            </strong>
</div>
